# crawler_rust

./: Cargo.toml  urls.csv
src/: main.rs
