[package]
name = "rust_crawler"
version = "0.1.0"
authors = ["Tristan Luong <tristan.luong@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.0"
async-std = "1.2.0"
html5ever = "0.25.1"
scraper = "0.4.0"
surf = "1.0.3"
csv = "1.1.3"
io = "0.0.2"
scan-rules="^0.1"